Fixed XSS vulnerabilities in views where auto_link or simple_format is used.

--- a/app/views/admin/comments/index.html.haml
+++ b/app/views/admin/comments/index.html.haml
@@ -16,6 +16,6 @@
         = link_to image_tag('cross.png', :size => '16x16'), admin_comment_path(comment), :title => 'Poista',
           :confirm => "Haluatko varmasti poistaa vieraskirjaviestin?", :method => :delete
       
-      = auto_link(simple_format(comment.content))
+      = simple_format(auto_link(h(comment.content)))
 
 = paginate @comments
